Bumping up memory to fix OutOfMemoryError from travis-ci when running scala tests