@@ -22,6 +22,7 @@
         <version>${tycho-version}</version><!--$NO-MVN-MAN-VER$-->
         <configuration>
           <useUIHarness>true</useUIHarness>
+          <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=256m</argLine>
           <frameworkExtensions>
             <frameworkExtension>
               <groupId>p2.osgi.bundle</groupId>
